--- a/src/Containers/Nav/Nav.scss
+++ b/src/Containers/Nav/Nav.scss
@@ -1,8 +1,9 @@
 $blue-color: #0d6efd;
 $black-gray-color: #212529;
 
+
 .nav-container {
-    display: flex; 
+    display: flex;
     justify-content: start;
     align-items: center;
     width: 100%;
@@ -10,38 +11,108 @@ $black-gray-color: #212529;
     padding: 2px 00px;
     background-color: $black-gray-color ;
 }
+
 .navbar-brand {
+    position: fixed;
+    left: .5rem;
+    top: .5rem;
     margin: 5px 30px;
     font-size: 1.25rem;
     text-decoration: none;
     color: #fff;
-    // background-color: #0d6efd;
-
     font-family: Open Sans;
 }
-.nav-button-container {
+
+.button-container {
     display: flex;
     justify-content: start;
-    width: 80%;
+    width: 70%;
+    transition: 0.5s;
+    margin-bottom: 10px;
+
+    button:hover {
+        cursor: pointer;
+    }
+
+    button {
+        font-size: 1rem;
+        border: none;
+        margin: 5px 15px;
+        text-decoration: none;
+        font-family: Open Sans;
+        
+    }
+
 }
-
-
-
-.add-order {
-    font-size: 1rem;
-    border: none;
-    margin: 5px 15px;
-    text-decoration: none;
-    font-family: Open Sans;
+.add-order, .portfolio, .market-map, .about-the-app {
     color: $blue-color;
-    background-color: $black-gray-color;
+        background-color: $black-gray-color;
 }
 
-@media(max-width: 970px){
-    .nav-button-container{
-        display: none;
+.add-order {}
+
+.check-btn svg {
+    width: 60px;
+    position: fixed;
+    right: 1.5rem;
+    top: 0rem;
+    color: #fff;
+    z-index: 10;
+}
+
+.check-btn,
+#check {
+    display: none;
+    cursor: pointer;
+}
+
+.profit {
+    background-color: rgba(4, 117, 4, 0.81);
+    border: none;
+    border-radius: 5px;
+    width: 200px;
+    height: 45px;
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #e9e9e9bb;
+}
+
+
+@media(max-width: 970px) {
+    .check-btn {
+        display: block;
+    }
+
+    .button-container {
+        position: fixed;
+        top: -34vh;
+        left: 0px;
+        background-color: $black-gray-color ;
+        transition: 0.5s;
+        height: 27vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #check:checked~nav div {
+        top: 7vh;
+    }
+
+    .profit {
+        background-color: rgba(4, 117, 4, 0.81);
+        border: none;
+        border-radius: 5px;
+        width: 95%;
+        height: 45px;
+        margin-top: 10px;
+        font-size: 1rem;
+        color: #e9e9e9bb;
     }
 }
-.nav-button-container button:first-child{
+
+.nav-button-container button:first-child {
     margin-left: 0px;
-    }
+}
