--- a/src/Containers/Body/Body.scss
+++ b/src/Containers/Body/Body.scss
@@ -2,21 +2,44 @@
     position: relative;
     top: 7vh;
     left: 0;
-    background-color: rgb(187, 184, 184);
-    height: 5000px;
-    width: 100%;
     z-index: -100;
     display: flex;
     justify-content: center;
 }
-table {
+.titr-container{
+    position: fixed;
+    top: 7vh;
+    left: 0;
+    width: 100%;
+    height: 9vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.1rem;
+    background-color: #fff;
+    z-index: 50;
+}
+.titr{
+    margin-top: 20px;
+}
+.table-container{
     position: absolute;
-    top: 15vh;
-    
+    top: 10vh;
+    width: 95%;
+    height: 500px;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+.table1{
+    // position: absolute;
+    width: 100%;
+    height: 90%;
+    top: 15vh; 
 }
 table, th, td{
 
-    top: 8vh;
-    border: 1px solid black;
+    top: 28vh;
+    border: 1px solid rgba(215, 215, 215, 0.73);
     border-collapse: collapse ;
+    text-align: center;
 }
