--- a/src/Containers/Body/Body.css
+++ b/src/Containers/Body/Body.css
@@ -25,6 +25,10 @@
   margin-top: 20px;
 }
 
+tbody tr {
+  cursor: pointer;
+}
+
 .table-container {
   position: absolute;
   top: 10vh;
@@ -32,6 +36,12 @@
   height: 500px;
   overflow-y: auto;
   overflow-x: auto;
+}
+.table-container tbody tr:nth-of-type(odd) {
+  background-color: rgba(243, 243, 243, 0.593);
+}
+.table-container tbody tr:hover {
+  background-color: rgba(230, 229, 229, 0.618);
 }
 
 .table1 {
@@ -45,4 +55,10 @@ table, th, td {
   border: 1px solid rgba(215, 215, 215, 0.73);
   border-collapse: collapse;
   text-align: center;
+  padding: 6px 0px;
+}
+
+thead {
+  border-bottom: 2px solid black;
+  background-color: #fff;
 }/*# sourceMappingURL=Body.css.map */
