--- a/src/Containers/Body/Body.scss
+++ b/src/Containers/Body/Body.scss
@@ -22,6 +22,11 @@
 .titr{
     margin-top: 20px;
 }
+tbody tr {
+    cursor: pointer;
+    
+}
+
 .table-container{
     position: absolute;
     top: 10vh;
@@ -29,6 +34,12 @@
     height: 500px;
     overflow-y: auto;
     overflow-x: auto;
+    tbody tr:nth-of-type(odd){
+        background-color: rgba(243, 243, 243, 0.593);
+    }
+    tbody tr:hover{
+        background-color: rgba(230, 229, 229, 0.618);
+    }
 }
 .table1{
     // position: absolute;
@@ -42,4 +53,9 @@ table, th, td{
     border: 1px solid rgba(215, 215, 215, 0.73);
     border-collapse: collapse ;
     text-align: center;
+    padding: 6px 0px;
+}
+thead{
+    border-bottom: 2px solid black;
+    background-color: #fff;
 }
