--- a/src/Containers/Body/Body.scss
+++ b/src/Containers/Body/Body.scss
@@ -59,3 +59,93 @@ thead{
     border-bottom: 2px solid black;
     background-color: #fff;
 }
+.modal-icon{
+    // position: absolute;
+    width: 300px;
+    height: 600px;
+    // top: 10px;
+    // left: 100px;
+    background-color: yellow;
+}
+.modal-container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+.header-modal{
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    border-bottom: 1px solid rgb(202, 202, 202);
+    svg{
+        position: absolute;
+        left: 265px;
+        top: 15px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
+}
+.body-modal{
+    position: relative;
+    width: 90%;
+    height: 75%;
+    display: flex;
+    border-radius: 5px;
+    flex-direction: column;
+    align-items: center;
+    top: 20%;
+    left: 0;
+    border: 1px solid rgb(218, 218, 218);
+   
+}
+.img-modal-container{
+    position: absolute;
+    width: 275px;
+    height: 210px;
+}
+.img-modal{
+    position: absolute;
+    width: 170px;
+    height: 170px;
+    top: 20px;
+    left: 55px;
+}
+.p-container{
+    position: absolute;
+    width: 70%;
+    height: 60px;
+    display: flex;
+    justify-content: space-around;
+    align-items: start;
+    text-align: center;
+    top: 210px;
+    font-size: 1rem;
+    p{
+        font-size: 1rem;
+        font-weight: bold;
+    }
+}
+.CurrentPrice{
+    position: absolute;
+    width: 70%;
+    height: 25px;
+    top: 260px;
+    text-align: center;
+}
+.ath{
+    position: absolute;
+    width: 70%;
+    height: 25px;
+    top: 285px;
+    text-align: center;
+}
+.ath-date{
+    position: absolute;
+    width: 90%;
+    height: 25px;
+    top: 305px;
+    text-align: center;
+}
+
+
