--- a/src/UI/PlaceOfOrders/PlaceOfOrders.css
+++ b/src/UI/PlaceOfOrders/PlaceOfOrders.css
@@ -2,10 +2,21 @@
   position: fixed;
   left: 0px;
   top: 0px;
+  display: flex;
+  justify-content: center;
   height: 100%;
   width: 25rem;
   background-color: #dcdcdc;
   z-index: 300;
+}
+
+.order-header-container {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 70px;
+  background-color: yellow;
 }
 
 .exit {
@@ -15,4 +26,20 @@
   width: 35px;
   height: 35px;
   color: rgb(55, 55, 55);
+}
+
+.accordion {
+  position: absolute;
+  top: 70px;
+  width: 80%;
+  height: 60px;
+  background-color: aquamarine;
+}
+
+.order-list {
+  position: absolute;
+  top: 130px;
+  width: 80%;
+  height: 45px;
+  background-color: rgb(250, 15, 183);
 }/*# sourceMappingURL=PlaceOfOrders.css.map */
