--- a/src/UI/Leftdropbox/Leftdropbox.scss
+++ b/src/UI/Leftdropbox/Leftdropbox.scss
@@ -1,1 +1,114 @@
- 
+
+.dropdown-box {
+    position: relative;
+    top: 80px;
+    left: 0px;
+    width: 85%;
+    height: 60px;
+    border: 1px solid rgb(224, 224, 224);
+    display: inline-block;
+    border-radius: 2px;
+  }
+  
+  .dropdown-header {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    
+    background-color: #c5e3fab8;
+    p{
+        color: #5690ed;
+        margin-left: 10px;
+    }
+  }
+  .accordion-body{
+    width: 100%;
+    height: 420px;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+  }
+  .form-floating1{
+    width: 295px;
+    height: 60px;
+    position: absolute;
+    top: 80px;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 3px;
+  }
+  .form-select{
+    border: none;
+  }
+  .form-container{
+    position: relative;
+    top: 80px;
+    width: 295px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    // border: 1px solid rgb(240, 34, 34);
+  }
+  .form-label{
+    width: 100%;
+    height: 20px;
+    // position: absolute;
+    // top: 140px;
+    // border: 1px solid rgb(157, 157, 157);
+    border-radius: 3px;
+    margin: 5px 0px;
+  }
+  .input-form-control{
+    width: 290px;
+    height: 30px;
+    border: 1px solid rgb(224, 224, 224);
+  }
+  .form-floating2{
+    width: 295px;
+    height: 60px;
+    margin-top: 20px;
+    border: 1px solid rgb(224, 224, 224);
+    border-radius: 3px;
+  }
+  
+  .dropdown-options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none;
+  }
+  
+  .open .dropdown-options {
+    display: block;
+  }
+  
+  .dropdown-item {
+    padding: 10px;
+    cursor: pointer;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .dropdown-item:last-child {
+    border-bottom: none;
+  }
+  .save-btn{
+    position: absolute;
+    top: 420px;
+    left: 35px;
+    border: none;
+    width: 60px;
+    height: 35px;
+    border-radius: 3px;
+    background-color: rgb(18, 72, 221);
+    color: #fff;
+    margin-top: 5px;
+  }
+  
