--- a/src/UI/PlaceOfOrders/PlaceOfOrders.css
+++ b/src/UI/PlaceOfOrders/PlaceOfOrders.css
@@ -6,7 +6,7 @@
   justify-content: center;
   height: 100%;
   width: 25rem;
-  background-color: #dcdcdc;
+  background-color: #ffffff;
   z-index: 300;
 }
 
@@ -16,7 +16,6 @@
   left: 0px;
   width: 100%;
   height: 70px;
-  background-color: yellow;
 }
 
 .exit {
