--- a/src/UI/Leftdropbox/Leftdropbox.scss
+++ b/src/UI/Leftdropbox/Leftdropbox.scss
@@ -9,15 +9,28 @@
     display: inline-block;
     border-radius: 2px;
   }
+  .open{
+    position: relative;
+    top: 80px;
+    left: 0px;
+    width: 85%;
+    height: 600px;
+    border: 1px solid rgb(224, 224, 224);
+    display: inline-block;
+    border-radius: 2px;
+    overflow-y: auto;
+    overflow-x: auto;
+  }
   
   .dropdown-header {
+    position: fixed;
     cursor: pointer;
-    width: 100%;
-    height: 100%;
+    width: 340px;
+    height: 60px;
     display: flex;
     align-items: center;
-    
-    background-color: #c5e3fab8;
+    z-index: 200;
+    background-color: #c5e3fa;
     p{
         color: #5690ed;
         margin-left: 10px;
@@ -30,6 +43,7 @@
     border-radius: 3px;
     display: flex;
     justify-content: center;
+   
   }
   .form-floating1{
     width: 295px;
@@ -38,13 +52,24 @@
     top: 80px;
     border: 1px solid rgb(224, 224, 224);
     border-radius: 3px;
+    
+  }
+  .choose-your-icon{
+    font-size: 0.8rem;
+    margin-left: 5px;
+    color: #b1b1b1;
+  }
+  .coin-options{
+   
+    
   }
   .form-select{
     border: none;
+    width: 100%;
   }
   .form-container{
     position: relative;
-    top: 80px;
+    top: 140px;
     width: 295px;
     display: flex;
     justify-content: center;
@@ -111,4 +136,23 @@
     color: #fff;
     margin-top: 5px;
   }
+  .order-table-container{
+    width: 100%;
+    margin-top: 60px;
+    tbody tr:nth-of-type(odd){
+        background-color: rgba(243, 243, 243, 0.593);
+    }
+    tbody tr:hover{
+        background-color: rgba(230, 229, 229, 0.618);
+    }
+  }
+  .order-table{
+    width: 100%;
+  }
+  table svg{
+    width: 20px;
+    height: 20px;
+    color: rgb(224, 8, 8);
+  }
+
   
