--- a/src/UI/PortfolioManagement/PortfolioManagement.css
+++ b/src/UI/PortfolioManagement/PortfolioManagement.css
@@ -4,7 +4,7 @@
   top: 0px;
   height: 100%;
   width: 25rem;
-  background-color: #dcdcdc;
+  background-color: #ffffff;
   z-index: 300;
 }
 
@@ -15,4 +15,175 @@
   width: 35px;
   height: 35px;
   color: rgb(55, 55, 55);
+}
+
+.dropdown-box-right {
+  position: relative;
+  top: 80px;
+  right: 0px;
+  width: 85%;
+  height: 60px;
+  border: 1px solid rgb(224, 224, 224);
+  display: inline-block;
+  border-radius: 2px;
+}
+
+.open-right {
+  position: relative;
+  top: 80px;
+  right: 0px;
+  width: 85%;
+  height: 600px;
+  border: 1px solid rgb(224, 224, 224);
+  display: inline-block;
+  border-radius: 2px;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+.dropdown-header-right {
+  position: fixed;
+  cursor: pointer;
+  right: 27px;
+  top: 60px;
+  width: 340px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  z-index: 200;
+  background-color: #c5e3fa;
+}
+.dropdown-header-right p {
+  color: #5690ed;
+  margin-left: 10px;
+}
+
+.accordion-body-right {
+  width: 84.5%;
+  height: 330px;
+  border: 1px solid rgb(224, 224, 224);
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  top: 120px;
+  left: 33px;
+}
+
+.form-floating1-right {
+  width: 295px;
+  height: 60px;
+  position: absolute;
+  top: 10px;
+  border: 1px solid rgb(224, 224, 224);
+  border-radius: 3px;
+}
+
+.choose-your-icon {
+  font-size: 0.8rem;
+  margin-left: 5px;
+  color: #b1b1b1;
+}
+
+.form-select {
+  border: none;
+  width: 100%;
+}
+
+.form-container-right {
+  position: relative;
+  top: 75px;
+  width: 295px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.form-label {
+  width: 100%;
+  height: 20px;
+  border-radius: 3px;
+  margin: 5px 0px;
+}
+
+.input-form-control {
+  width: 290px;
+  height: 30px;
+  border: 1px solid rgb(224, 224, 224);
+}
+
+.form-floating2 {
+  width: 295px;
+  height: 60px;
+  margin-top: 20px;
+  border: 1px solid rgb(224, 224, 224);
+  border-radius: 3px;
+}
+
+.dropdown-options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: none;
+}
+
+.open .dropdown-options {
+  display: block;
+}
+
+.dropdown-item {
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ccc;
+}
+
+.dropdown-item:last-child {
+  border-bottom: none;
+}
+
+.save-btn-right {
+  position: absolute;
+  top: 280px;
+  left: 35px;
+  border: none;
+  width: 60px;
+  height: 35px;
+  border-radius: 3px;
+  background-color: rgb(18, 72, 221);
+  color: #fff;
+  margin-top: 5px;
+}
+
+table svg {
+  width: 20px;
+  height: 20px;
+  color: rgb(224, 8, 8);
+}
+
+.order-table-container-right {
+  width: 340px;
+  margin-top: 140px;
+  right: 50px;
+}
+.order-table-container-right tbody tr:nth-of-type(odd) {
+  background-color: rgba(243, 243, 243, 0.593);
+}
+.order-table-container-right tbody tr:hover {
+  background-color: rgba(230, 229, 229, 0.618);
+}
+
+.order-table-right {
+  width: 100%;
+}
+
+table svg {
+  width: 20px;
+  height: 20px;
+  color: rgb(224, 8, 8);
 }/*# sourceMappingURL=PortfolioManagement.css.map */
