--- a/src/Containers/Nav/Nav.css
+++ b/src/Containers/Nav/Nav.css
@@ -37,9 +37,27 @@
   font-family: Open Sans;
 }
 
-.add-order, .portfolio, .market-map, .about-the-app {
+.add-order,
+.portfolio,
+.market-map,
+.about-the-app {
   color: #0d6efd;
   background-color: #212529;
+}
+
+.add-order-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.value-container {
+  width: 20px;
+  height: 20px;
+  background-color: rgb(210, 214, 3);
+  color: #fff;
+  border-radius: 50%;
+  margin: auto;
 }
 
 .check-btn svg {
