--- a/src/Containers/Nav/Nav.scss
+++ b/src/Containers/Nav/Nav.scss
@@ -40,16 +40,33 @@ $black-gray-color: #212529;
         margin: 5px 15px;
         text-decoration: none;
         font-family: Open Sans;
-        
+
     }
 
 }
-.add-order, .portfolio, .market-map, .about-the-app {
+
+.add-order,
+.portfolio,
+.market-map,
+.about-the-app {
     color: $blue-color;
-        background-color: $black-gray-color;
+    background-color: $black-gray-color;
 }
 
-.add-order {}
+.add-order-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.value-container {
+    width: 20px;
+    height: 20px;
+    background-color: rgb(210, 214, 3);
+    color: #fff;
+    border-radius: 50%;
+    margin: auto;
+}
 
 .check-btn svg {
     width: 60px;
@@ -76,6 +93,7 @@ $black-gray-color: #212529;
     font-size: 1rem;
     color: #e9e9e9bb;
 }
+
 .red {
     background-color: rgba(191, 38, 14, 0.81);
     border: none;
@@ -111,7 +129,7 @@ $black-gray-color: #212529;
         top: 7vh;
     }
 
-    .green{
+    .green {
         background-color: rgba(4, 117, 4, 0.81);
         border: none;
         border-radius: 5px;
@@ -121,7 +139,8 @@ $black-gray-color: #212529;
         font-size: 1rem;
         color: #e9e9e9bb;
     }
-    .red{
+
+    .red {
         background-color: rgba(191, 38, 14, 0.81);
         border: none;
         border-radius: 5px;
