--- a/src/Containers/Nav/Nav.scss
+++ b/src/Containers/Nav/Nav.scss
@@ -60,6 +60,9 @@ $black-gray-color: #212529;
 }
 
 .value-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20px;
     height: 20px;
     background-color: rgb(210, 214, 3);
