--- a/src/Containers/Nav/Nav.scss
+++ b/src/Containers/Nav/Nav.scss
@@ -3,34 +3,48 @@ $black-gray-color: #212529;
 
 
 .nav-container {
-    display: flex;
-    justify-content: start;
-    align-items: center;
+    
     width: 100%;
-    height: 7vh;
+    height: 8vh;
     padding: 2px 00px;
     background-color: $black-gray-color ;
 }
 
 .navbar-brand {
+    box-sizing: border-box;
     position: fixed;
-    left: .5rem;
-    top: .5rem;
-    margin: 5px 30px;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 60px;
     font-size: 1.25rem;
     text-decoration: none;
     color: #fff;
     font-family: Open Sans;
+    white-space: nowrap;
+}
+.button-container{
+    display: flex;
+    margin-left: 150px;
+}
+.main-btn-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: stretch;
+    flex-wrap: wrap;
+}
+.btn-container{
+    display: flex;
 }
 
-.button-container {
-    display: flex;
-    justify-content: start;
-    width: 70%;
-    transition: 0.5s;
-    margin-bottom: 10px;
-
     button:hover {
+        cursor: pointer;
+    }
+    svg{
         cursor: pointer;
     }
 
@@ -40,10 +54,8 @@ $black-gray-color: #212529;
         margin: 5px 15px;
         text-decoration: none;
         font-family: Open Sans;
-
     }
 
-}
 
 .add-order,
 .portfolio,
@@ -51,40 +63,89 @@ $black-gray-color: #212529;
 .about-the-app {
     color: $blue-color;
     background-color: $black-gray-color;
+    white-space: nowrap;
+
 }
 
 .add-order-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    margin: 2px 15px;
+
 }
 
 .value-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20px;
+    width: 25px;
     height: 20px;
-    background-color: rgb(210, 214, 3);
+    background-color: rgb(214, 186, 3);
     color: #fff;
     border-radius: 50%;
-    margin: auto;
 }
 
-.check-btn svg {
-    width: 60px;
-    position: fixed;
-    right: 1.5rem;
-    top: 0rem;
+.profolio-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 2px 15px;
+}
+
+.value2-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25px;
+    height: 20px;
+    background-color: rgb(214, 31, 3);
     color: #fff;
-    z-index: 10;
+    border-radius: 50%;
 }
+.check-btn{
+    position: fixed;
+    // right: 10px;
+    // top: -20px;
+    background-color: #fff;
+    display: none;
+    // justify-content: center;
+    // width: 60px;
+    // height: 50px;
+    svg{
+        width: 60px;
+        height: 60px;
+    }
 
+}
 .check-btn,
-#check {
+#check{
     display: none;
     cursor: pointer;
 }
+
+.navbar-toggler {
+    display: none;
+    cursor: pointer;
+}
+// #check
+//  {
+//     display: none;
+//     cursor: pointer;
+// }
+
+.btn {
+    position: fixed;
+    
+    right: 10px;
+    top: 10px;
+    color: #e62020;
+    z-index: 10;
+    // background-color: yellow;
+}
+
 
 .green {
     background-color: rgba(4, 117, 4, 0.81);
@@ -95,6 +156,10 @@ $black-gray-color: #212529;
     margin-top: 10px;
     font-size: 1rem;
     color: #e9e9e9bb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
 }
 
 .red {
@@ -106,37 +171,34 @@ $black-gray-color: #212529;
     margin-top: 10px;
     font-size: 1rem;
     color: #e9e9e9bb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
 }
 
 
-@media(max-width: 970px) {
+@media(max-width: 975px) {
     .check-btn {
         display: block;
+        
     }
-
-    .button-container {
-        position: fixed;
-        top: -34vh;
-        left: 0px;
-        background-color: $black-gray-color ;
-        transition: 0.5s;
-        height: 27vh;
-        width: 100%;
+    
+      #check:checked~.main-btn-container {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        height: 300px;
     }
-
-    #check:checked~nav div {
-        top: 7vh;
+      #check:checked~.nav-container {
+        
+        height: 300px;
     }
 
     .green {
         background-color: rgba(4, 117, 4, 0.81);
         border: none;
         border-radius: 5px;
-        width: 95%;
+        width: 80%;
         height: 45px;
         margin-top: 10px;
         font-size: 1rem;
@@ -155,6 +217,6 @@ $black-gray-color: #212529;
     }
 }
 
-.nav-button-container button:first-child {
-    margin-left: 0px;
-}
+// .nav-button-container button:first-child {
+//     margin-left: 0px;
+// }
