--- a/src/Containers/Nav/Nav.css
+++ b/src/Containers/Nav/Nav.css
@@ -1,42 +1,47 @@
-.nav-container {
+.nav-div {
   width: 100%;
-  height: 8vh;
-  padding: 2px 0px;
+  height: 60px;
   background-color: #212529;
+  position: relative;
+  left: 0px;
+}
+
+.nav-container {
+  position: absolute;
+  background-color: #212529;
+  width: 90%;
+  height: 60px;
+  display: flex;
+  flex-direction: row;
 }
 
 .navbar-brand {
   box-sizing: border-box;
-  position: fixed;
+  position: absolute;
   left: 0px;
-  top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 150px;
+  width: 130px;
   height: 60px;
   font-size: 1.25rem;
   text-decoration: none;
   color: #fff;
   font-family: Open Sans;
   white-space: nowrap;
-}
-
-.button-container {
-  display: flex;
-  margin-left: 150px;
+  z-index: 1;
+  background-color: #212529;
 }
 
 .main-btn-container {
+  position: absolute;
+  left: 130px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  align-content: stretch;
-  flex-wrap: wrap;
-}
-
-.btn-container {
-  display: flex;
+  width: 80%;
+  height: 60px;
+  background-color: #212529;
+  transition: all 0.5s;
 }
 
 button:hover {
@@ -67,9 +72,10 @@ button {
 .add-order-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
-  margin: 2px 15px;
+  background-color: #212529;
+  box-sizing: border-box;
+  width: 150px;
 }
 
 .value-container {
@@ -86,9 +92,10 @@ button {
 .profolio-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   align-items: center;
   margin: 2px 15px;
+  box-sizing: border-box;
+  width: 250px;
 }
 
 .value2-container {
@@ -103,32 +110,25 @@ button {
 }
 
 .check-btn {
-  position: fixed;
-  background-color: #fff;
-  display: none;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 50px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 3px;
+  z-index: 1;
 }
 .check-btn svg {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
 }
 
 .check-btn,
 #check {
   display: none;
   cursor: pointer;
-}
-
-.navbar-toggler {
-  display: none;
-  cursor: pointer;
-}
-
-.btn {
-  position: fixed;
-  right: 10px;
-  top: 10px;
-  color: #e62020;
-  z-index: 10;
 }
 
 .green {
@@ -165,13 +165,43 @@ button {
   .check-btn {
     display: block;
   }
-  #check:checked ~ .main-btn-container {
-    display: flex;
-    flex-direction: column;
-    height: 300px;
+  .check-btn {
+    position: fixed;
+    right: 5px;
+    top: 5px;
+    background-color: #212529;
   }
-  #check:checked ~ .nav-container {
-    height: 300px;
+  .main-btn-container {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 200px;
+    left: 0px;
+    top: -400px;
+    z-index: 0;
+  }
+  .navbar-brand {
+    box-sizing: border-box;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    height: 60px;
+    font-size: 1.25rem;
+    text-decoration: none;
+    color: #fff;
+    font-family: Open Sans;
+    white-space: nowrap;
+  }
+  #check:checked ~ div {
+    top: 59px;
+    transition: all 0.5s;
   }
   .green {
     background-color: rgba(4, 117, 4, 0.81);
@@ -182,6 +212,7 @@ button {
     margin-top: 10px;
     font-size: 1rem;
     color: rgba(233, 233, 233, 0.7333333333);
+    margin-bottom: 5px;
   }
   .red {
     background-color: rgba(191, 38, 14, 0.81);
